# adventofcode

./: README.md
2015/: .gitignore  Cargo.toml
2015/src/: main.rs
2015/src/day1/: mod.rs
2015/src/day2/: mod.rs
2015/src/day3/: mod.rs
2015/src/day4/: mod.rs
2015/src/day5/: mod.rs
2015/src/day6/: mod.rs
2015/src/day7/: evaluate.rs  grammar.pest  instruction.rs  mod.rs  parser.rs
2016/aoc/: Cargo.toml  README.md
aoc2017/: AoC2017.code-workspace  Cargo.toml  test.rb
aoc2017/assembly/: Cargo.toml
aoc2017/bulk/: Cargo.toml
aoc2017/day22/: Cargo.toml
aoc2017/day23/: Cargo.toml
aoc2017/day24/: Cargo.toml
aoc2017/src/: main.rs
aoc2017/util/: Cargo.toml
aoc2018/: Cargo.toml
aoc2018/src/: day.rs  main.rs  util.rs
aoc2019/: Cargo.toml  output.txt
aoc2019/src/: day.rs  main.rs
aoc2019/src/day01/: mod.rs
aoc2019/src/day02/: mod.rs
aoc2019/src/day03/: mod.rs
aoc2019/src/day04/: mod.rs
aoc2019/src/day05/: mod.rs
aoc2019/src/day06/: mod.rs
aoc2019/src/day07/: mod.rs
aoc2019/src/day08/: mod.rs
aoc2019/src/day09/: mod.rs
aoc2019/src/day10/: mod.rs
aoc2019/src/day11/: mod.rs
aoc2019/src/day12/: mod.rs
aoc2019/src/day13/: mod.rs
aoc2019/src/day14/: mod.rs
aoc2019/src/intcode/: memory.rs  mod.rs
aoc2020/: Cargo.toml
aoc2020/src/: day1.rs  dayerror.rs  grid3d.rs  grid4d.rs  main.rs  point3d.rs  point4d.rs
aoc2020/src/day1/: mod.rs
aoc2020/src/day10/: mod.rs
aoc2020/src/day11/: common.rs  hayward_input_translated.txt  mod.rs  part1.rs  part2.rs  seating.rs  traits.rs
aoc2020/src/day12/: mod.rs
aoc2020/src/day13/: mod.rs
aoc2020/src/day14/: mod.rs  part2.rs
aoc2020/src/day15/: mod.rs
aoc2020/src/day16/: mod.rs
aoc2020/src/day17/: mod.rs
aoc2020/src/day18/: expressions.rs  grammar.lalrpop  grammar2.lalrpop  mod.rs
aoc2020/src/day19/: mod.rs
aoc2020/src/day2/: mod.rs
aoc2020/src/day22/: mod.rs
aoc2020/src/day23/: mod.rs  ring.rs
aoc2020/src/day24/: mod.rs
aoc2020/src/day25/: mod.rs
aoc2020/src/day3/: mod.rs
aoc2020/src/day4/: mod.rs
aoc2020/src/day5/: mod.rs
aoc2020/src/day6/: mod.rs
aoc2020/src/day7/: mod.rs
aoc2020/src/day8/: mod.rs
aoc2020/src/day9/: mod.rs
aoc2020/src/interpreter/: mod.rs
aoc2021/: Cargo.toml
aoc2021/src/: day.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs
aoc2021/src/bingo/: mod.rs
aoc2021/src/common/: command.rs  grid.rs  mod.rs  position.rs
aoc2021/src/inputs/day14/: sequence.txt
aoc2022/src/: day1.rs  main.rs
(+153 files in other folders)
