[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Matthew Walton <matthew@mathw.me.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.2"
pathfinding = "2"
rayon = "1.2.1"
num-rational = "0.2.2"