[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Matthew Walton <matthew@mathw.me.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.2"
pathfinding = "2"
rayon = "1.2.1"
regex = "1.3.1"
lazy_static = "1.4.0"

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8"