[package]
authors = ["Matthew Walton <matthew@mathw.me.uk>"]
edition = "2018"
name = "aoc2019"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
lazy_static = "1.4.0"
num-integer = "0.1.41"
pathfinding = "2"
rayon = "1.5.0"
regex = "1.4.2"
termion = "1.5"
tui = "0.13.0"

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
