[package]
authors = ["Matthew Walton <matthew@mathw.me.uk>"]
edition = "2018"
name = "aoc2020"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.12"
itertools = "0.9.0"
lazy_static = "1.4.0"
rayon = "1.5.0"
regex = "1.4.2"
thiserror = "1.0.22"
