[package]
authors = ["Matthew Walton <matthew@mathw.me.uk>"]
edition = "2018"
name = "aoc2020"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = {version = "0.19.1", features = ['lexer']}

[dependencies]
clap = "2.33.3"
crossterm = "0.18"
image = "0.23.12"
itertools = "0.9.0"
lalrpop-util = "0.19.1"
lazy_static = "1.4.0"
ndarray = "0.14"
rayon = "1.5.0"
regex = "1.4.2"
thiserror = "1.0.22"
tui = {version = "0.13.0", default-features = false, features = ['crossterm']}
