[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = { version = "1.13.0", default-features = false, features = ["colors"] }
clap = "2.33.3"
itertools = "0.10.1"
rayon = "1.5.1"